# framework-control

./: .cursorrules  .editorconfig  .gitignore  .rules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINUX_INSTALL.MD  PROJECT_SUMMARY.md  README.md  flake.nix  install-linux.sh  package-lock.json  todo.md  uninstall-linux.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: close-external-prs.yml  deploy-pages.yml  nix-build.yml  pr-checks.yml  release-service.yml
aur/: PKGBUILD  framework-control.install
aur-beta/: PKGBUILD
nix/: module.nix  package.nix
service/: .example.env  Cargo.toml  rustfmt.toml
service/scripts/: create_desktop_entry.sh  create_shortcuts.ps1
service/src/: cli.rs  config.rs  main.rs  routes.rs  shortcuts.rs  state.rs  static.rs  types.rs  update.rs
service/src/cli/: framework_tool.rs  framework_tool_parser.rs  linux_power.rs  mod.rs  ryzen_adj.rs  ryzen_adj_parser.rs
service/src/tasks/: auto_update.rs  battery.rs  fan_curve.rs  mod.rs  power.rs  telemetry.rs
service/src/utils/: download.rs  extract.rs  fs.rs  github.rs  global_cache.rs  mod.rs  reconciler.rs  wget.rs  zip_extract.rs
service/wix/: FrameworkControlService.xml  main.wxs
web/: .eslintrc.cjs  .example.env  .prettierignore  .prettierrc.cjs  README.md  eslint.config.cjs  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/scripts/: build-linux.mjs  build-msi.mjs  bump-version.mjs  gen-api.mjs  gen-icons.mjs
web/src/: App.svelte  app.css  main.ts  svelte.d.ts  vite-env.d.ts
web/src/api/: index.ts
web/src/api/core/: OpenAPI.ts
web/src/api/models/: Config.ts  (+29 more)
web/src/components/: BatteryControl.svelte  CalibrationModal.svelte  DeviceHeader.svelte  FanControl.svelte  GraphPanel.svelte  LogsModal.svelte  MultiSelect.svelte  Panel.svelte  PowerControl.svelte  Sensors.svelte  SettingsModal.svelte  ShortcutInstaller.svelte  Telemetry.svelte  TelemetryGraph.svelte  UiControlCard.svelte  UiSlider.svelte  VersionMismatchModal.svelte
web/src/lib/: api.ts  device.ts  measureHeight.ts  platform.ts  semver.ts  seriesColors.ts  spline.ts  themes.ts  thermal.ts  tooltip.ts  tooltipClamp.ts  utils.ts
web/src/routes/: Fan.svelte  Telemetry.svelte
(+1 files in other folders)
