[package]
name = "framework-control-service"
version = "0.1.11"
edition = "2021"
authors = ["Framework Control"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
which = "6"
chrono = "0.4"


[package.metadata.wix]
eula = false


