[package]
name = "framework-control-service"
version = "0.2.0"
edition = "2021"
authors = ["Framework Control"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
which = "6"
chrono = "0.4"
sysinfo = { version = "0.30", features = ["multithread"] }
poem = { version = "3.1.12" }
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }


[package.metadata.wix]
eula = false


